# lvgl-wasm

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  infinitime.md  lv_conf.h
.cargo/: config
.github/workflows/: ccpp.yml  simulator.yml
clock/: BatteryController.h  BatteryIcon.h  BleController.h  BleIcon.h  Clock.cpp  Clock.h  Clock2.cpp  ClockHelper.cpp  ClockHelper.h  DateTimeController.cpp  DisplayApp.h  LittleVgl.cpp  LittleVgl.h  Makefile  Screen.h  Symbols.cpp  Symbols.h  WatchFaceDigital.cpp  WatchFaceDigital.h  bg_clock_04.c  jetbrains_mono_bold_20.c  jetbrains_mono_extrabold_compressed.c  resources_config.h
demo/: lv_demo_widgets.c  lv_demo_widgets.h
docs/: index.md  lvgl.html  lvgl.js  lvgl.txt  lvgl.wasm  lvgl2.html  lvgl2.js  lvgl2.wasm  rust.html  rust.js  script.html  script.js  test.js  test.txt  test.wasm  test_rust.html  test_rust.js  test_rust.txt  test_rust.wasm  test_rust2.html
docs/codemirror/lib/: codemirror.css
docs/rust/: index.html  index.js
docs/rust/pkg/: lvgl_wasm_rust.d.ts  lvgl_wasm_rust.js  lvgl_wasm_rust_bg.d.ts  lvgl_wasm_rust_bg.js  lvgl_wasm_rust_bg.wasm  package.json
docs/rust/src/: lib.rs
mynewt/: Makefile  README.md  build.cmd  inline.c
mynewt/wasm/: Cargo.toml  README.md
mynewt/wasm/src/: lib.rs  script.rs
rust/: Cargo.toml  Makefile  README.md  index.js
rust/app/: Cargo.toml
rust/app/src/: README.md  lib.rs  screen_time.rs  watch_face.md  watch_face.rs
rust/app/tmp/: create.c  create.rs  update.c  update.rs
rust/demo/: Cargo.toml  README.md  package-lock.json
rust/demo/src/: lib.rs
rust/lvgl/: Cargo.toml  README.md
rust/lvgl/src/: console.rs
rust/macros/: Cargo.toml
rust/macros/src/: safe_wrap.rs
rust/src/: lib.rs
rust/wasm/: Cargo.toml  index.js
rust/wasm/src/: lib.rs
src/lv_core/: lv_obj.c  lv_style.c  lv_style.h
src/lv_draw/: lv_draw_blend.c  lv_draw_img.c  lv_draw_label.c  lv_draw_rect.c  lv_img_buf.c  lv_img_buf.h  lv_img_cache.c  lv_img_decoder.c
src/lv_misc/: lv_color.h
src/lv_themes/: lv_theme_material.c  lv_theme_mono.c
src/lv_widgets/: lv_canvas.c
wasm/: copy-rust.sh  copy-wasm.cmd  copy-wasm.sh  copy-wasm2.sh  lv_port_disp.c  lv_port_disp.h  lvgl.c  lvgl.sh  script.html  script.js  test.c  test_rust.c  texture.c.old
