[package]
name = "lvgl_wasm_rust"
version = "0.1.0"
authors = ["luppy@appkaki.com"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
#crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
]
